--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@400&family=Playfair+Display:wght@400');
+
 body {
-  background-color: #202d40;
+  background-color: #333333;
+  line-height: 1.625em;
+  -webkit-font-smoothing: antialiased; /* Instructs the browser to use greyscale antialiasing to smooth the edges of text */
+  -moz-osx-font-smoothing: greyscale; /* Specifies greyscaling antialiasing to render font */
 }
